Add TIMEOUT option
Add a TIMEOUT option to clicraft.conf for tuning the wait time for
"critical operations" and use it in the stop script.

--- a/src/etc/clicraft-defaults.conf.in
+++ b/src/etc/clicraft-defaults.conf.in
@@ -66,3 +66,9 @@ START_COMMAND="java -jar $SERVER_JAR nogui"
 #
 DOWNLOAD_COMMAND="curl -#L -o $SERVER_JAR $SERVER_URL"
 
+# TIMEOUT
+# The amount of time, in seconds, that clicraft will wait for critical
+# operations to finish.
+#
+TIMEOUT=20
+
