--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -17,3 +17,5 @@ fi
 START_COMMAND="${START_COMMAND-java -jar $SERVER_JAR nogui}"
 DOWNLOAD_COMMAND="${DOWNLOAD_COMMAND-curl -#L -o "$SERVER_JAR" "$SERVER_URL"}"
 
+TIMEOUT="${TIMEOUT-20}"
+
