Change the meaning of SERVER_TYPE
Once the redb_* functions are used, it will be necessary to have a
valid SERVER_TYPE option, so give it a default value and validate it.

--- a/src/bin/clicraft.in
+++ b/src/bin/clicraft.in
@@ -24,6 +24,11 @@ else
 	. "$EXECDIR/$MULTIPLEXER.sh"
 fi
 
+if [ ! -f "$CONFDIR/redb/$SERVER_TYPE.tab" ]; then
+	err "Invalid server type: $SERVER_TYPE"
+	exit 1
+fi
+
 # bail if we're root
 if [ "$(id -u)" = "0" ]; then
 	err "You cannot run this program as root"
