Use serverprop() in backup script
Use the serverprop() function in the example backup script instead
of duplicating boilerplate code to parse server.properties.

--- a/src/etc/action.d/backup.sh.example
+++ b/src/etc/action.d/backup.sh.example
@@ -6,7 +6,7 @@
 #
 
 BACKUP_DIR="$SERVER_DIR/backups"
-WORLD=$(grep 'level-name=' server.properties | cut -d '=' -f 2)
+WORLD=$(serverprop 'level-name')
 DATE=$(date +%Y%m%d-%H%M%S)
 
 RE_SAVE_OFF="$(redb_lookup cmd/save-off "$(redb_lookup timestamp)")"
