Changes default SERVER_TYPE to minecraft
Changes the default SERVER_TYPE varible in the clicraft-defaults.conf file from "" to "minecraft" as "" is not a valid type

This fixes #15

--- a/src/etc/clicraft-defaults.conf.in
+++ b/src/etc/clicraft-defaults.conf.in
@@ -50,7 +50,7 @@ SERVER_URL="https://s3.amazonaws.com/MinecraftDownload/launcher/minecraft_server
 #SERVER_JAR="$SERVER_DIR/craftbukkit.jar"
 #SERVER_URL="http://cbukk.it/craftbukkit.jar"
 #
-SERVER_TYPE=""
+SERVER_TYPE="minecraft"
 
 
 # START_COMMAND
