Add exit trap helper functions
Run a series of cleanup commands on exit. These commands can be
added with pushtrap() and removed with poptrap(). Every pushtrap()
should have a matching poptrap() to avoid unexpected behavior.

--- a/src/bin/clicraft.in
+++ b/src/bin/clicraft.in
@@ -18,6 +18,9 @@ fi
 . "$EXECDIR/defaults.sh"
 . "$EXECDIR/$MULTIPLEXER.sh"
 
+# run exithandler function on exit
+trap "exithandler" EXIT
+
 # bail if we're root
 if [ "$(id -u)" = "0" ]; then
 	err "You cannot run this program as root"
