--- a/scripts/bash_completion.in
+++ b/scripts/bash_completion.in
@@ -6,13 +6,13 @@ _clicraft_cmd() {
 	mc_cmds="ban ban-ip banlist deop gamemode give help ? kick kill list me
 		op pardon pardon-ip save-all save-off save-on say stop tell time
 		toggledownfall tp whitelist xp"
-	if [ "$COMP_CWORD" = 2 ]; then
+	if [[ "$COMP_CWORD" = 2 ]]; then
 		echo $mc_cmds
 	fi
 }
 
 _clicraft_help() {
-	if [ "$COMP_CWORD" = 2 ]; then
+	if [[ "$COMP_CWORD" = 2 ]]; then
 		actions
 	fi
 }
@@ -28,7 +28,7 @@ _clicraft() {
 	. "$EXECDIR/defaults.sh"
 	. "$EXECDIR/functions.sh"
 	
-	if [ -f "$CONFDIR/clicraft.conf" ]; then
+	if [[ -f "$CONFDIR/clicraft.conf" ]]; then
 	    . "$CONFDIR/clicraft.conf"
 	fi
 
@@ -38,7 +38,7 @@ _clicraft() {
 	prev="${COMP_WORDS[COMP_CWORD-1]}"
 	action="${COMP_WORDS[1]}"
 
-	if [ "$COMP_CWORD" = 1 ]; then
+	if [[ "$COMP_CWORD" = 1 ]]; then
 		COMPREPLY=( $(compgen -W "$(actions)" -- $cur) )
 	elif declare -f _clicraft_$action >/dev/null; then
 		COMPREPLY=( $(compgen -W "$(_clicraft_$action)" -- $cur) )
