--- a/src/bin/clicraft.in
+++ b/src/bin/clicraft.in
@@ -10,7 +10,7 @@ exec_prefix="@exec_prefix@"
 CONFDIR="@CONFDIR@"
 EXECDIR="@EXECDIR@"
 
-if [ -f "$CONFDIR/clicraft.conf" ]; then
+if [[ -f "$CONFDIR/clicraft.conf" ]]; then
 	. "$CONFDIR/clicraft.conf"
 fi
 
@@ -22,7 +22,7 @@ fi
 trap "exithandler" EXIT
 
 # bail if we're root
-if [ "$(id -u)" = "0" ]; then
+if [[ "$(id -u)" = "0" ]]; then
 	err "You cannot run this program as root"
 	exit 1
 fi
@@ -34,7 +34,7 @@ mkdir -p "$SERVER_DIR" 2>/dev/null
 # bail if we can't cd
 cd "$SERVER_DIR" 2>/dev/null
 retval="$?"
-if [ "$retval" != 0 ]; then
+if [[ "$retval" != 0 ]]; then
 	err "Could not change to directory $SERVER_DIR"
 	exit "$retval"
 fi
