--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -16,12 +16,13 @@ if [[ ! -f "$EXECDIR/$MULTIPLEXER.sh" ]]; then
 fi
 
 SERVER_TYPE="${SERVER_TYPE-minecraft}"
+SERVER_VERSION="${SERVER_VERSION-release}"
 if [[ "$SERVER_TYPE" = "bukkit" ]]; then
 	SERVER_JAR="${SERVER_JAR-$SERVER_DIR/craftbukkit.jar}"
 	SERVER_URL="${SERVER_URL-http://cbukk.it/craftbukkit.jar}"
 else
 	SERVER_JAR="${SERVER_JAR-$SERVER_DIR/minecraft_server.jar}"
-	SERVER_URL="${SERVER_URL-https://s3.amazonaws.com/MinecraftDownload/launcher/minecraft_server.jar}"
+	SERVER_URL="${SERVER_URL-https://s3.amazonaws.com/Minecraft.Download/versions/%v/minecraft_server.%v.jar}"
 fi
 
 if [[ -f "$CONFDIR/redb/$SERVER_TYPE.tab" ]]; then
