--- a/src/etc/clicraft-defaults.conf.in
+++ b/src/etc/clicraft-defaults.conf.in
@@ -22,7 +22,7 @@ MULTIPLEXER="tmux"
 
 # SERVER_DIR
 # The directory that the server is launched from.
-# This is the directory that your world data, server.properties, and server.log
+# This is the directory that your world data, server.properties, and server log
 # (among other things) resides in.
 #
 SERVER_DIR="@DEFAULT_SERVER_DIR@"
