--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -33,6 +33,7 @@ else
 fi
 
 START_COMMAND="${START_COMMAND-java -jar $SERVER_JAR nogui}"
+STOP_CMD="${STOP_CMD-stop}"
 DOWNLOAD_COMMAND="${DOWNLOAD_COMMAND-curl -#L -o "$SERVER_JAR" "$SERVER_URL"}"
 
 TIMEOUT="${TIMEOUT-20}"
