--- a/Makefile.in
+++ b/Makefile.in
@@ -52,6 +52,7 @@ SERVER_DIR = @DEFAULT_SERVER_DIR@
 
 WITH_MCEXPLORE = @WITH_MCEXPLORE@
 WITH_C10T      = @WITH_C10T@
+WITH_MMAT      = @WITH_MMAT@
 
 # controls actual build
 include Makefile.inc
