Replace CMD_STRIP_SLASH with CMD_LSTRIP
Instead of optionally stripping the leading slash from commands,
let the user specify an arbitrary string to strip.

--- a/src/etc/clicraft-defaults.conf.in
+++ b/src/etc/clicraft-defaults.conf.in
@@ -94,9 +94,8 @@ DOWNLOAD_COMMAND="curl -#L -o $SERVER_JAR $SERVER_URL"
 TIMEOUT=20
 
 
-# CMD_STRIP_SLASH
-# Whether or not to strip the leading slash for commands passed to
-# `clicraft cmd`.
-CMD_STRIP_SLASH="true"
+# CMD_LSTRIP
+# Strip this string from the front of commands passed to `clicraft cmd`
+CMD_LSTRIP="/"
 
 
