--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -43,5 +43,5 @@ if [[ "$TIMEOUT" -ne "$TIMEOUT" ]] 2>/dev/null; then
 	TIMEOUT=20
 fi
 
-CMD_STRIP_SLASH="${CMD_STRIP_SLASH-true}"
+CMD_LSTRIP="${CMD_LSTRIP-/}"
 
