--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,7 @@ Makefile
 src/bin/clicraft
 src/lib/defaults.sh
 src/etc/clicraft-defaults.conf
+src/etc/clicraft-starmade.conf
 scripts/bash_completion
 scripts/cron
 scripts/logrotate
