Separate validation logic from defaults
Move code for validating options out of defaults.sh and into its
own file.

--- a/src/bin/clicraft.in
+++ b/src/bin/clicraft.in
@@ -17,6 +17,7 @@ fi
 
 . "$EXECDIR/functions.sh"
 . "$EXECDIR/defaults.sh"
+. "$EXECDIR/validate.sh"
 . "$EXECDIR/$MULTIPLEXER.sh"
 
 # run exithandler function on exit
