--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -1,5 +1,5 @@
 SRC_BINFILES  := src/bin/clicraft
-SRC_EXECFILES := src/lib/functions.sh src/lib/defaults.sh \
+SRC_EXECFILES := src/lib/functions.sh src/lib/defaults.sh src/lib/validate.sh \
                  src/lib/tmux.sh src/lib/screen.sh \
                  $(wildcard src/lib/action.d/*.sh)
 SRC_CONFFILES := src/etc/clicraft-defaults.conf \
@@ -24,6 +24,7 @@ DIST        := $(DIST) src
 DISTCLEAN   := $(DISTCLEAN) \
                src/bin/clicraft \
                src/lib/defaults.sh \
+               src/lib/validate.sh \
                src/etc/clicraft-defaults.conf \
                src/etc/clicraft-starmade.conf
 
