--- a/src/etc/clicraft-starmade.conf.in
+++ b/src/etc/clicraft-starmade.conf.in
@@ -129,3 +129,9 @@ CMD_TIMEOUT=$TIMEOUT
 CMD_LSTRIP=""
 
 
+# REDB
+# The location of the regex database
+#
+REDB="@CONFDIR@/redb/$SERVER_TYPE.tab"
+
+
