--- a/src/etc/action.d/explore.sh.example
+++ b/src/etc/action.d/explore.sh.example
@@ -26,7 +26,7 @@ fi
 
 # abort with an error if the server is already running
 if status; then
-	err "You cannot run this while $SERVER_NAME is running."
+	err "You cannot run this while %s is running." "$SERVER_NAME"
 	return 1
 fi
 
