--- a/src/etc/action.d/pregen.sh.example
+++ b/src/etc/action.d/pregen.sh.example
@@ -15,8 +15,8 @@ VIEWDIST="$(( viewdist * 16 ))"
 PREGEN_TIMEOUT="${PREGEN_TIMEOUT-$TIMEOUT}"
 
 if [[ ! "$PREGEN_TIMEOUT" =~ ^[+-]?[0-9]+$ ]]; then
-	warn "Invalid timeout: $PREGEN_TIMEOUT"
-	warn "Falling back to $TIMEOUT"
+	warn "Invalid timeout: %s" "$PREGEN_TIMEOUT"
+	warn "Falling back to %d" "$TIMEOUT"
 	PREGEN_TIMEOUT=$TIMEOUT
 fi
 
@@ -27,26 +27,26 @@ fi
 
 if ! [[ ( "$X" =~ ^-?[0-9]+$ && "$Z" =~ ^-?[0-9]+$ ) || \
         ( "$X" == "" && "$Z" == "" ) ]]; then
-	warn "Invalid value for center: $X $Z"
+	warn "Invalid value for center: %s %s" "$X" "$Z"
 	return 1
 fi
 
 if [[ ! "$SIZE" =~ ^[0-9]+$ ]]; then
-	err "Size not a positive integer: $SIZE"
+	err "Size not a positive integer: %s" "$SIZE"
 	return 1
 else
 	RADIUS="$((SIZE / 2))"
 fi
 
 if [[ ! "$VIEWDIST" =~ ^[0-9]+$ ]]; then
-	err "Could not find valid view-distance in server.properties: $VIEWDIST"
+	err "Could not find valid %s in %s: %s" "view-distance" "server.properties" "$VIEWDIST"
 	return 1
 fi
 
 action status >/dev/null || return 1
 
 if ! list | grep -i "^$PLAYER$"; then
-	err "Player $PLAYER is not logged in"
+	err "Player %s is not logged in" "$PLAYER"
 	return 1
 fi
 
@@ -55,7 +55,7 @@ cmd "gamemode 1 $PLAYER"
 if [[ "$X" =~ ^-?[0-9]+$ && "$Z" =~ ^-?[0-9]+$ ]]; then
 	cmd "tp $PLAYER $X ~ $Z"
 else
-	msg "Using position of $PLAYER for center"
+	msg "Using position of %s for center" "$PLAYER"
 fi
 
 cmd "tp $PLAYER ~-$RADIUS ~ ~-$RADIUS"
