--- a/src/etc/action.d/explore.sh.example
+++ b/src/etc/action.d/explore.sh.example
@@ -19,7 +19,7 @@ MCEXPLORE="$(wickedwhich mcexplore mcexplore.py)" || return 1
 if [[ $# != 1 && $# != 3 ]]; then
 	action help explore
 	return 1
-elif ! [[ "$1" =~ ^[0-9]+$ && "$2" =~ ^-?[0-9]*$ && "$3" =~ ^-?[0-9]*$ ]]; then
+elif ! [[ "$1" =~ ^[+]?[0-9]+$ && "$2" =~ ^[+-]?[0-9]*$ && "$3" =~ ^[+-]?[0-9]*$ ]]; then
 	err "Arguments must be integers"
 	return 1
 fi
