Fix example crontab
Replace ${exec_prefix} in scripts/cron with its literal value.

--- a/Makefile.in
+++ b/Makefile.in
@@ -36,6 +36,7 @@ man9dir       = $(mandir)/man9
 manext        = .1
 srcdir        = @srcdir@
 
+SED             = @SED@
 INSTALL         = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA    = @INSTALL_DATA@
