--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -28,5 +28,5 @@ START_TIMEOUT="${START_TIMEOUT-$TIMEOUT}"
 STOP_TIMEOUT="${STOP_TIMEOUT-$TIMEOUT}"
 CMD_TIMEOUT="${CMD_TIMEOUT-$TIMEOUT}"
 
-CMD_LSTRIP="${CMD_LSTRIP-/}"
+CMD_LSTRIP="${CMD_LSTRIP:-/}"
 
