--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -21,7 +21,7 @@ REDB="${REDB-$CONFDIR/redb/$SERVER_TYPE.tab}"
 
 START_COMMAND="${START_COMMAND-java -jar $SERVER_JAR nogui}"
 STOP_CMD="${STOP_CMD-stop}"
-DOWNLOAD_COMMAND="${DOWNLOAD_COMMAND-curl -#L -o "$SERVER_JAR" "$SERVER_URL"}"
+DOWNLOAD_COMMAND="${DOWNLOAD_COMMAND-curl -#fL -o "$SERVER_JAR" "$SERVER_URL"}"
 
 TIMEOUT="${TIMEOUT-20}"
 START_TIMEOUT="${START_TIMEOUT-$TIMEOUT}"
